--- a/.env
+++ b/.env
@@ -1,4 +1,2 @@
-VUE_APP_BASE_URL=https://savi-backend..test
-#VUE_APP_BASE_URL=https://api.corpjorge.com/app
-VUE_APP_TITLE=Savi
-#NODE_ENV=production
+VITE_APP_BASE_URL=http://savi-backend.test/api/
+VITE_APP_URL=http://savi-backend.test/
