--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
-VITE_APP_BASE_URL=http://savi-backend.test/api/
-VITE_APP_URL=http://savi-backend.test/
+VITE_APP_BASE_URL=http://192.168.0.12/api/
+VITE_APP_URL=http://192.168.0.12/
+
