--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-VITE_APP_BASE_URL=http://127.0.0.1:8000/api
-VITE_APP_URL=http://127.0.0.1:8000
+VITE_APP_BASE_URL=api.savi3.savinteractivo.com/api
+VITE_APP_URL=api.savi3.savinteractivo.com
